add code-block template for YAML

--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -90,6 +90,8 @@ div.language-rust::before     { content: "Rust"; }
 div.language-scala::before    { content: "Scala"; }
 div.language-sql::before      { content: "SQL"; }
 div.language-vulkan::before   { content: "Vulkan"; }
+div.language-yaml::before     { content: "YAML"; }
+
 
 // Tab panels are used on Setup pages to show instructions for different Operating Systems
 .tab-pane {
